=head1 NAME

Changes - Apache mod_perl change logfile

=head1 CHANGES

=over 3

=item 1.19_01-dev

cygwin port [Stipe Tolj <tolj@uni-duesseldorf.de>]

Documented $r->pnotes [<ask@valueclick.com>]

Change "setting auth_name" trace message so we don't get it without
having enabled a MOD_PERL_TRACE level [Ask Bjoern Hansen
<ask@valueclick.com>]

s/class/pclass/g so we can compile w/ c++

mod_perl will now save/restore SIGALRM

fix Apache::Status bug prototype check of 'use constant' subs, thanks to
Eric Cholet for the spot

added set_byterange() and each_byterange() methods

added proper support for {Location,Directory,Files}Match in <Perl> sections

new Apache::ExtUtils::pm function to generate Foo.pm/Makefile.PL
templates for modules with directive handlers

Makefile.PL will now do a handful of sanity checks looking for
possible broken configurations and offer suggestions for those it
finds

rework PerlFreshRestart to avoid core dump triggered w/ 5.005_03

fix $Apache::Server::Starting under dso

use ap_bfileno() instead of r->connnection->client->fd directly
[Paul J. Reder <rederpj@raleigh.ibm.com>]

fix Table.xs:table_modify() under win32
[Trung Tran-Duc <trung.tranduc@prague.ixos.cz>]

get rid of odd WRITE message in perlio.pl test if $Config{usesfio}
[John Hughes <john@calva.com>]

fix possible overwrite in perlio.c:sfapacheread() #ifdef USE_SFIO
[John Hughes <john@calva.com>]

dont use DEFAULT_PATH if r->subprocess_env->{PATH} is already set
[Bertrand Demiddelaer <wing_co@hotmail.com>]

ensure perl_setup_env() is called just once per-request
[Salvador Ortiz Garcia <sog@msg.com.mx>]

:common Apache::Constants are compiled at bootstrap time, so CVs are
shared and AUTOLOAD is avoided, which was known to cause a spin
while loading SERVER_ERROR for particular Perl errors

<Perl> sections now use 1.3.7-dev's cmd_parms->context to cure many
known, old bugs, e.g. @DirectoryIndex outside of %Location, .htaccess
and many more  [Salvador Ortiz Garcia <sog@msg.com.mx>]
